2014-01-16  Ilya Enkovich  <ilya.enkovich@intel.com>

	* ipa-ref.c (ipa_remove_stmt_references): Fix references
	traversal when removing references.

2014-01-16  Jan Hubicka  <jh@suse.cz>

	PR ipa/59775
	* tree.c (get_binfo_at_offset): Look harder for virtual bases.

2014-01-16  Bernd Schmidt  <bernds@codesourcery.com>

	PR middle-end/56791
	* reload.c (find_reloads_address_1): Do not use RELOAD_OTHER when
	pushing a reload for an autoinc when we had previously reloaded an
	inner part of the address.

2014-01-16  Jakub Jelinek  <jakub@redhat.com>

	* tree-vectorizer.h (struct _loop_vec_info): Add no_data_dependencies
	field.
	(LOOP_VINFO_NO_DATA_DEPENDENCIES): Define.
	* tree-vect-data-refs.c (vect_analyze_data_ref_dependence): Clear it
	when not giving up or versioning for alias only because of
	loop->safelen.
	(vect_analyze_data_ref_dependences): Set to true.
	* tree-vect-stmts.c (hoist_defs_of_uses): Return false if def_stmt
	is a GIMPLE_PHI.
	(vectorizable_load): Use LOOP_VINFO_NO_DATA_DEPENDENCIES instead of
	LOOP_REQUIRES_VERSIONING_FOR_ALIAS, add && !nested_in_vect_loop
	to the condition.

	PR middle-end/58344
	* expr.c (expand_expr_real_1): Handle init == NULL_TREE.

	PR target/59839
	* config/i386/i386.c (ix86_expand_builtin): If target doesn't
	satisfy operand 0 predicate for gathers, use a new pseudo as
	subtarget.

2014-01-16  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/59609
	* lra-constraints.c (process_alt_operands): Add printing debug
	info.  Check absence of input/output reloads for matched operands
	too.

2014-01-16  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/59835
	* ira.c (ira_init_register_move_cost): Increase cost for
	impossible modes.

2014-01-16  Alan Lawrence  <alan.lawrence@arm.com>

	* config/arm/arm.opt: Make -mcpu, -march, -mtune case-insensitive.

2014-01-16  Richard Earnshaw  <rearnsha@arm.com>

	PR target/59780
	* aarch64.c (aarch64_split_128bit_move): Don't lookup REGNO on