@@ -1,3 +1,7 @@
+2014-01-17  Zhenqiang Chen  <zhenqiang.chen@arm.com>
+
+	* gcc.target/arm/its.c: New testcase.
+
 2014-01-16  Jan Hubicka  <jh@suse.cz>
 
 	PR ipa/59775
