@@ -1,3 +1,8 @@
+2014-01-17  Zhenqiang Chen  <zhenqiang.chen@arm.com>
+
+	* config/arm/arm.c (arm_v7m_tune): Set max_insns_skipped to 2.
+	(thumb2_final_prescan_insn): Set max to MAX_INSN_PER_IT_BLOCK.
+
 2014-01-16  Ilya Enkovich  <ilya.enkovich@intel.com>
 
 	* ipa-ref.c (ipa_remove_stmt_references): Fix references
